--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,154 @@
-.App {
-  text-align: center;
+.custom {
+  display: flex;
+  justify-content: space-between;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav{
+  border-bottom: 1px solid rgb(235, 231, 231);
+  background-color: rgb(251, 249, 249);;
+  position: sticky;
+  top: 0px;
+  transition: opacity 0.2s ease-in-out 0s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.head1{
+  font-size: 65px;
+  font-weight: 700;
+  line-height: 68px;
+  letter-spacing: -0.03em;
+  color: rgb(43, 5, 20);
 }
+.para{
+  color: rgb(43, 5, 20);
+  font-size: 20px;
+  line-height: 130%;
+}
+.btn1{
+  width: 300px;
+  height: 60px;
+  background-color: rgb(235, 35, 113);
+  border: 0px;
+  color: white;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: larger;
+}
+.head2{
+  color: rgb(43, 5, 20);
+  font-size: 18px;
+  font-weight: 700;
+  padding: 5px 0px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.head3{
+  color: rgb(43, 5, 20);
+  font-size: 16px;
+  line-height: 130%;
+  white-space: pre-line;
+
+}
+.sec3{
+  width: 90%;
+  background: #F2E9E9;
+margin-left: 500px;
+
+}
+.para1{
+  color: rgb(43, 5, 20);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 30px;
+margin-left: 20PX;
+ }
+.para2{
+  font-size: 15px;
+  font-weight: 500;
+  margin-left: 0PX;
+  margin-top: 10px;
+
+  
+  color: rgb(43, 5, 20);
+}
+.cl1{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.slick-prev{
+  background-color: aqua;
+  color: rgb(255, 0, 0);
+}
+.side{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sec-4{
+width: 80%;
+height: 500px;
+background-image: url(./Assets/image5.webp);
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+gap: 30px;
+cursor: pointer;
+transition: background-image 0.5s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+.head5{
+  font-weight: 700;
+    
+    color: white;
+  white-space: pre-line;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn3{
+  width: 250px;
+  height: 50px;
+  font-size: 30px;
+  
+  
 }
+.rating{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 100px;
+
+}
+.row2{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 15px;
+}
+.footer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 100px;
+  color: black;
+}
+.btn1{
+  
+  width: 200px;
+  align-self: center;
+  
+  }
+  .des{
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
+  /* .slick-prev:before {
+    content: '←';
+    color: red;
+}
+.slick-prev:after {
+  content: '←';
+  color: red;
+} */
+
